; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_sub_end.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_command.c_mp_property_sub_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.m_property = type { i32 }
%struct.TYPE_2__ = type { double }

@MP_NOPTS_VALUE = common dso_local global double 0.000000e+00, align 8
@M_PROPERTY_UNAVAILABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.m_property*, i32, i8*)* @mp_property_sub_end to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mp_property_sub_end(i8* %0, %struct.m_property* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.m_property*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca double, align 8
  %11 = alloca %struct.TYPE_2__, align 8
  store i8* %0, i8** %6, align 8
  store %struct.m_property* %1, %struct.m_property** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = load %struct.m_property*, %struct.m_property** %7, align 8
  %14 = load i32, i32* %8, align 4
  %15 = load i8*, i8** %9, align 8
  %16 = call double @get_times(i8* %12, %struct.m_property* %13, i32 %14, i8* %15)
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store double %16, double* %17, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %19 = load double, double* %18, align 8
  store double %19, double* %10, align 8
  %20 = load double, double* %10, align 8
  %21 = load double, double* @MP_NOPTS_VALUE, align 8
  %22 = fcmp oeq double %20, %21
  br i1 %22, label %23, label %25

23:                                               ; preds = %4
  %24 = load i32, i32* @M_PROPERTY_UNAVAILABLE, align 4
  store i32 %24, i32* %5, align 4
  br label %30

25:                                               ; preds = %4
  %26 = load i32, i32* %8, align 4
  %27 = load i8*, i8** %9, align 8
  %28 = load double, double* %10, align 8
  %29 = call i32 @m_property_double_ro(i32 %26, i8* %27, double %28)
  store i32 %29, i32* %5, align 4
  br label %30

30:                                               ; preds = %25, %23
  %31 = load i32, i32* %5, align 4
  ret i32 %31
}

declare dso_local double @get_times(i8*, %struct.m_property*, i32, i8*) #1

declare dso_local i32 @m_property_double_ro(i32, i8*, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
